<resources>
    <string name="app_name">Sportaria</string>
    <string name="sports">Sports</string>
    <string name="teams">Teams</string>
    <string name="bookmark">Bookmarks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmation_deletion_item">Are you sure want to delete this item from your bookmark?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notif_success_title">Successfully Added</string>
    <string name="notif_success_desc">Check the bookmark tab to see it!</string>
    <string name="notif_failed_title">Failed Added</string>
    <string name="notif_failed_desc">Something Wrong Happen</string>
    <string name="no_internet">Check Your Network Connection</string>
    <string name="empty_item">You have no item here</string>
    <string name="reconnect">reconnect</string>
</resources>